syntax = "proto3";

package helloworld;

message HelloRequest {
  string name = 1;
}

message UserRequest{
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  //testing others messages and stream both sides.
  rpc addUser (UserRequest) returns (HelloReply) {}
  rpc addUserVerbose (UserRequest) returns (stream HelloReply) {}
  rpc addManyUsers (stream UserRequest) returns (HelloReply) {}
}
